--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ repositories {
   jcenter()
 }
 
+sourceCompatibility=1.7
+targetCompatibility=1.7
+
 dependencies {
   compile 'io.reactivex:rxjava:1.0.14'
   compile 'io.dropwizard.metrics:metrics-core:3.1.2'
@@ -62,3 +65,4 @@ gradle.taskGraph.whenReady {
   sourceSets.main.resources.srcDirs.each(createIfNotExists)
   sourceSets.test.resources.srcDirs.each(createIfNotExists)
 }
+
