--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,5 @@
-version=1.1-SNAPSHOT
+version=1.0.1
 group=com.workmarket
-sourceCompatibility=1.7
-targetCompatibility=1.7
 
 project_vendor=workmarket
 project_description=Succession Framework
